opam-version: "2.0"
name: "carton-lwt"
synopsis: "Implementation of PACK file in OCaml"
description: """\
Carton is an implementation of the PACK file
in OCaml. PACK file is used by Git to store Git objects. Carton is more
abstracted when it can store any objects."""
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "MIT"
homepage: "https://git.robur.coop/robur/carton" 
doc: "https://robur-coop.github.io/carton/"
bug-reports: "https://git.robur.coop/robur/carton/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "3.11.0"}
  "carton" {= version}
  "cachet-lwt"
  "alcotest-lwt" {>= "1.8.0" & with-test}
  "digestif" {>= "1.2.0" &  with-test}
]
conflicts: [ "result" {< "1.5"} ]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/robur-coop/carton.git"
x-maintenance-intent: [ "(latest)" ]

pin-depends: [
  [ "cachet-lwt.dev" "git+https://github.com/robur-coop/cachet.git#977e28a03616f0e89170d6b1cc067cdffa4e9cab" ]
]
