opam-version: "2.0"
name: "carton-miou-unix"
synopsis: "Implementation of PACK file in OCaml for Miou"
description: """Carton is an implementation of the PACK file
in OCaml. PACK file is used by Git to store Git objects. Carton is more
abstracted when it can store any objects."""
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "MIT"
homepage: "https://git.robur.coop/robur/carton" 
doc: "https://robur-coop.github.io/carton/"
bug-reports: "https://git.robur.coop/robur/carton/issues"
depends: [
  "ocaml" {>= "5.0.0"}
  "dune" {>= "3.11.0"}
  "carton" {= version}
  "fmt"
  "hxd"
  "logs" {>= "0.7.0"}
  "fpath"
  "miou" {>= "0.3.1"}
  "ohex" {>= "0.2.0"}
  "digestif" {>= "1.2.0"}
  "progress" {>= "0.4.0"}
  "cmdliner" {>= "1.3.0"}
  "flux"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/robur-coop/carton.git"
x-maintenance-intent: [ "(latest)" ]
