opam-version: "2.0"
name: "carton"
synopsis: "Implementation of PACKv2 file in OCaml"
description: """\
Carton is an implementation of the PACKv2 file
in OCaml. PACKv2 file is used by Git to store Git objects.
Carton is more abstracted when it can store any objects."""
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "MIT"
homepage: "https://git.robur.coop/robur/carton"
doc: "https://robur-coop.github.io/carton/"
bug-reports: "https://git.robur.coop/robur/carton/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "3.11.0"}
  "cachet" {>= "0.0.2"}
  "duff" {>= "0.5"}
  "optint"
  "checkseum"
  "bstr"
  "decompress" {>= "1.5.0"}
  "progress"
  "logs"
  "ohex"
]
conflicts: [ "result" {< "1.5"} ]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/robur-coop/carton.git"
x-maintenance-intent: [ "(latest)" ]
