(library
 (name carton)
 (modules carton h zh)
 (public_name carton)
 (wrapped false)
 (libraries
  ohex
  cachet
  duff
  optint
  checkseum
  decompress.de
  decompress.zl
  logs))

(library
 (name classeur)
 (modules classeur)
 (public_name carton.classeur)
 (wrapped false)
 (libraries ohex carton))

(library
 (name cartonnage)
 (modules cartonnage)
 (public_name carton.cartonnage)
 (wrapped false)
 (libraries hxd.core hxd.string fmt carton))
